--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ apply plugin: 'application'
 mainClassName = 'org.jbehave.template.RunnableEmbedder'
 
 dependencies {
-    compile group: 'org.jbehave', name: 'jbehave-core', version: '4.0-beta-3'
-    compile group: 'org.springframework', name: 'jbehave-web-selenium', version: '3.5.5'
+    compile (
+        'org.jbehave:jbehave-core:4.0-beta-3',
+        'org.seleniumhq.selenium:selenium-java:2.35.0'
+    )
 }
 
 repositories {
