--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'application'
 
 mainClassName = 'org.jbehave.template.RunnableEmbedder'
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.7'
+}
+
 dependencies {
     compile (
         'org.jbehave:jbehave-core:4.0-beta-3',
